// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/carousel/demo/autoplay.md correctly 1`] = `
<div class="ant-carousel">
  <div class="slick-slider slick-initialized">
    <div class="slick-list">
      <div class="slick-track" style="width: 900%; left: -100%;">
        <div tabindex="-1" data-index="-1" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="0" class="slick-slide slick-active slick-current" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>1</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="1" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>2</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="2" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>3</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="3" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="4" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>1</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="5" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>2</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="6" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>3</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="7" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul class="slick-dots" style="display: block;">
      <li class="slick-active"><button class="">1</button></li>
      <li class=""><button class="">2</button></li>
      <li class=""><button class="">3</button></li>
      <li class=""><button class="">4</button></li>
    </ul>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/basic.md correctly 1`] = `
<div class="ant-carousel">
  <div class="slick-slider slick-initialized">
    <div class="slick-list">
      <div class="slick-track" style="width: 900%; left: -100%;">
        <div tabindex="-1" data-index="-1" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="0" class="slick-slide slick-active slick-current" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>1</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="1" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>2</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="2" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>3</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="3" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="4" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>1</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="5" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>2</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="6" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>3</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="7" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul class="slick-dots" style="display: block;">
      <li class="slick-active"><button class="">1</button></li>
      <li class=""><button class="">2</button></li>
      <li class=""><button class="">3</button></li>
      <li class=""><button class="">4</button></li>
    </ul>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/customArrows.md correctly 1`] = `
<div class="ant-carousel">
  <div class="slick-slider slick-initialized">
    <div class="custom-slick-arrow slick-arrow slick-prev" style="left: 10px; z-index: 1; display: block;"><i aria-label="icon: left-circle" class="anticon anticon-left-circle"><svg viewBox="64 64 896 896" data-icon="left-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M603.3 327.5l-246 178a7.95 7.95 0 0 0 0 12.9l246 178c5.3 3.8 12.7 0 12.7-6.5V643c0-10.2-4.9-19.9-13.2-25.9L457.4 512l145.4-105.2c8.3-6 13.2-15.6 13.2-25.9V334c0-6.5-7.4-10.3-12.7-6.5z"></path>
          <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"></path>
        </svg></i></div>
    <div class="slick-list">
      <div class="slick-track" style="width: 900%; left: -100%;">
        <div tabindex="-1" data-index="-1" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="0" class="slick-slide slick-active slick-current" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>1</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="1" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>2</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="2" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>3</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="3" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="4" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>1</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="5" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>2</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="6" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>3</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="7" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="custom-slick-arrow slick-arrow slick-next" style="right: 10px; display: block;"><i aria-label="icon: right-circle" class="anticon anticon-right-circle"><svg viewBox="64 64 896 896" data-icon="right-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
          <path d="M666.7 505.5l-246-178A8 8 0 0 0 408 334v46.9c0 10.2 4.9 19.9 13.2 25.9L566.6 512 421.2 617.2c-8.3 6-13.2 15.6-13.2 25.9V690c0 6.5 7.4 10.3 12.7 6.5l246-178c4.4-3.2 4.4-9.8 0-13z"></path>
          <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"></path>
        </svg></i></div>
    <ul class="slick-dots" style="display: block;">
      <li class="slick-active"><button class="">1</button></li>
      <li class=""><button class="">2</button></li>
      <li class=""><button class="">3</button></li>
      <li class=""><button class="">4</button></li>
    </ul>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/customPaging.md correctly 1`] = `
<div class="ant-carousel">
  <div class="slick-slider slick-initialized"><button type="button" class="slick-arrow slick-prev" style="display: block;"> Previous</button>
    <div class="slick-list">
      <div class="slick-track" style="width: 900%; left: -100%;">
        <div tabindex="-1" data-index="-1" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;"><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract04.jpg"></div>
          </div>
        </div>
        <div tabindex="-1" data-index="0" class="slick-slide slick-active slick-current" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;"><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract01.jpg"></div>
          </div>
        </div>
        <div tabindex="-1" data-index="1" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;"><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract02.jpg"></div>
          </div>
        </div>
        <div tabindex="-1" data-index="2" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;"><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract03.jpg"></div>
          </div>
        </div>
        <div tabindex="-1" data-index="3" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;"><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract04.jpg"></div>
          </div>
        </div>
        <div tabindex="-1" data-index="4" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;"><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract01.jpg"></div>
          </div>
        </div>
        <div tabindex="-1" data-index="5" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;"><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract02.jpg"></div>
          </div>
        </div>
        <div tabindex="-1" data-index="6" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;"><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract03.jpg"></div>
          </div>
        </div>
        <div tabindex="-1" data-index="7" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;"><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract04.jpg"></div>
          </div>
        </div>
      </div>
    </div><button type="button" class="slick-arrow slick-next" style="display: block;"> Next</button>
    <ul class="slick-dots slick-thumb" style="display: block;">
      <li class="slick-active"><a class=""><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract01.jpg"></a></li>
      <li class=""><a class=""><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract02.jpg"></a></li>
      <li class=""><a class=""><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract03.jpg"></a></li>
      <li class=""><a class=""><img src="https://raw.githubusercontent.com/vueComponent/ant-design-vue/master/components/vc-slick/assets/img/react-slick/abstract04.jpg"></a></li>
    </ul>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/fade.md correctly 1`] = `
<div class="ant-carousel">
  <div class="slick-slider slick-initialized">
    <div class="slick-list">
      <div class="slick-track" style="width: 900%; left: -100%;">
        <div tabindex="-1" data-index="0" class="slick-slide slick-active slick-current" style="outline: none; width: 11.11111111111111%; position: relative; left: 0px; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>1</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="1" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%; position: relative; left: -11px; opacity: 0; transition: opacity 500ms ease, visibility 500ms ease;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>2</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="2" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%; position: relative; left: -22px; opacity: 0; transition: opacity 500ms ease, visibility 500ms ease;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>3</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="3" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%; position: relative; left: -33px; opacity: 0; transition: opacity 500ms ease, visibility 500ms ease;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul class="slick-dots" style="display: block;">
      <li class="slick-active"><button class="">1</button></li>
      <li class=""><button class="">2</button></li>
      <li class=""><button class="">3</button></li>
      <li class=""><button class="">4</button></li>
    </ul>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/vertical.md correctly 1`] = `
<div class="ant-carousel ant-carousel-vertical">
  <div class="slick-slider slick-vertical slick-initialized">
    <div class="slick-list">
      <div class="slick-track" style="width: 900%; left: -100%;">
        <div tabindex="-1" data-index="-1" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="0" class="slick-slide slick-active slick-current" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>1</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="1" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>2</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="2" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>3</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="3" aria-hidden="true" class="slick-slide" style="outline: none; width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="4" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>1</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="5" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>2</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="6" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>3</h3>
            </div>
          </div>
        </div>
        <div tabindex="-1" data-index="7" aria-hidden="true" class="slick-slide slick-cloned" style="width: 11.11111111111111%;">
          <div>
            <div tabindex="-1" class="" style="width: 100%; display: inline-block;">
              <h3>4</h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul class="slick-dots" style="display: block;">
      <li class="slick-active"><button class="">1</button></li>
      <li class=""><button class="">2</button></li>
      <li class=""><button class="">3</button></li>
      <li class=""><button class="">4</button></li>
    </ul>
  </div>
</div>
`;
